Wed May 16 23:00:53 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/extra.c libxslt/transform.c libxslt/variables.[ch]
	  libxslt/xsltInternals.h: optimizations, cleanup of global
	  variables handling

Wed May 16 12:29:17 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/extensions.c libxslt/preproc.c libxslt/transform.c
	  libxslt/variables.c: force the precompilation of XPath expressions
	  at stylesheet compilation time

Tue May 15 14:34:23 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/keys.c libxslt/transform.c: avoid some possibilities
	  of crashes on debug
	* tests/REC/Makefile.am: be less verbose if things really go wrong
	* tests/docs/Makefile.am tests/general/Makefile.am
	  tests/docs/bug-28-.xml tests/general/bug-28-.*: added bug-28 in
	  the regression tests

Sat May 12 12:39:54 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.c libxslt/xsltutils.c: fixed the default
	  detection method to generate HTML documents 
	* tests/REC/test-2.5-1.out tests/REC/test-8-1.out
	  tests/REC/test-9.1-2.out tests/REC2/html.xml tests/XSLTMark/game.out
	  tests/XSLTMark/html.out tests/XSLTMark/products.out
	  tests/XSLTMark/xslbench1.out tests/XSLTMark/xslbench2.out
	  tests/XSLTMark/xslbench3.out tests/general/bug-15-.out
	  tests/general/bug-5-.out: updated a number of tests output
	  accordingly

Sat May 12 09:43:10 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c: use LIBXML_DOCB_ENABLED, William M. Brack

Fri May 11 19:12:26 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/templates.c libxslt/transform.c: fixed bug #54446
	  about attribute being generated twice. Fixed a number of related
	  bugs on attributes handling.
	* tests/REC/test-7.1.4.out: this changed an attribute generation
	  order
	* tests/docs/bug-27-.xml tests/general/bug-27-.*: added test

Fri May 11 17:08:14 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
